# QT_Tutorials

001_non_qt_project/: CMakeLists.txt  main.cpp
002_non_qt_project/: CMakeLists.txt  main.cpp
003_non_qt_classes/: CMakeLists.txt  main.cpp
004_non_qt_classes/: CMakeLists.txt  main.cpp
005_non_qt_classes/: CMakeLists.txt  box.cpp  box.h  main.cpp  rectangle.cpp  rectangle.h
006_qt_intro/: CMakeLists.txt  widget.cpp  widget.ui
007_qt_quess_my_number/: CMakeLists.txt  widget.cpp  widget.ui  widget.ui.autosave
build-006_qt_intro-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-006_qt_intro-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-006_qt_intro-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-006_qt_intro-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/006_qt_intro_autogen/: deps
build-006_qt_intro-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/006_qt_intro_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d
build-007_qt_quess_my_number-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-007_qt_quess_my_number-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-007_qt_quess_my_number-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-007_qt_quess_my_number-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/007_qt_quess_my_number_autogen/: deps
(+42 files in other folders)
